// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
❌ Error 1/1

> 1 | { hasId { name } }
    |         ^ Field \`id\` must be selected when it's available on a type.
Include it in your selection set.
`;

exports[` 2`] = `
❌ Error 1/1

> 1 | { hasId { id } }
    |         ^ Field \`name\` must be selected when it's available on a type.
Include it in your selection set.
`;

exports[` 3`] = `
❌ Error 1/1

> 1 | { hasId { name } }
    |         ^ Fields \`id\` or \`_id\` must be selected when it's available on a type.
Include it in your selection set.
`;

exports[` 4`] = `
❌ Error 1/1

  1 |
  2 |         query User {
> 3 |           user {
    |                ^ Field \`id\` must be selected when it's available on a type.
Include it in your selection set or add to used fragments \`UserFullFields\`, \`UserMediumFields\`, or \`UserLightFields\`.
  4 |             ...UserFullFields
  5 |           }
  6 |         }
  7 |       
`;
